jaeb-macros/tests/compile_fail/handler_unknown_attr.rs
//! Unknown attribute should fail.

use jaeb::{HandlerResult, handler};

#[derive(Clone)]
struct MyEvent;

#[handler(unknown = 42)]
async fn on_event(event: &MyEvent) -> HandlerResult {
    let _ = event;
    Ok(())
}

fn main() {}
