jaeb-macros/tests/compile_fail/handler_unknown_attr.stderr
error: unknown attribute `unknown`, expected one of: retries, retry_strategy, retry_base_ms, retry_max_ms, dead_letter, priority, name
 --> tests/compile_fail/handler_unknown_attr.rs:8:11
  |
8 | #[handler(unknown = 42)]
  |           ^^^^^^^

warning: unused import: `HandlerResult`
 --> tests/compile_fail/handler_unknown_attr.rs:3:12
  |
3 | use jaeb::{HandlerResult, handler};
  |            ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
